force-app/main/default/objects/IT_Asset__c/IT_Asset__c.object-meta.xml
<CustomObject>
    <description>Manage 7S employee provisioned assets.</description>
    <label>IT Asset</label>
    <nameField>
        <displayFormat>ITA-{00000}</displayFormat>
        <label>IT Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>