force-app/main/default/objects/IT_Asset__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IT Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>