force-app/main/default/objects/IT_Asset__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Asus</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Intel</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Meraki</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Lenova</fullName>
                <isActive>false</isActive>
                <label>Lenova</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>