force-app/main/default/objects/IT_Asset__c/fields/Decommissioned__c.field-meta.xml
<CustomField>
    <fullName>Decommissioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decommissioned</label>
    <type>Checkbox</type>
</CustomField>