force-app/main/default/objects/IT_Asset__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MacBook Air</fullName>
            </value>
            <value>
                <fullName>MacBook Pro 13&quot;</fullName>
            </value>
            <value>
                <fullName>MacBook Pro 15&quot;</fullName>
            </value>
            <value>
                <fullName>MacBook Pro 16&quot;</fullName>
            </value>
            <value>
                <fullName>ThinkPad L590</fullName>
            </value>
            <value>
                <fullName>ThinkPad E590</fullName>
            </value>
            <value>
                <fullName>ThinkPad E580</fullName>
            </value>
            <value>
                <fullName>ThinkPad T570</fullName>
            </value>
            <value>
                <fullName>ThinkPad P52s</fullName>
            </value>
            <value>
                <fullName>840 G6</fullName>
            </value>
            <value>
                <fullName>850 G6</fullName>
            </value>
            <value>
                <fullName>MX84</fullName>
            </value>
            <value>
                <fullName>MR16</fullName>
            </value>
            <value>
                <fullName>MR45</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>iPad Pro</fullName>
            </value>
            <value>
                <fullName>Tab 4 (TB-8504F)</fullName>
            </value>
            <value>
                <fullName>Fire HD 8</fullName>
            </value>
            <value>
                <fullName>840 G7</fullName>
            </value>
            <value>
                <fullName>850 G7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>