force-app/main/default/objects/IT_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Type__c</columns>
    <columns>Purchased_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>